--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -109,6 +109,8 @@ section {
         border: none;
         cursor: pointer;
         position: relative;
+        font-size: 20px;
+        font-family: "Geosanslight", Arial;
         top: -5px;
         &:focus {
           transition: width 0.3s, border-radius 0.3s, background 0.3s;
@@ -213,6 +215,11 @@ section {
         background-color: #ddceca;
         display: inline-block;
         cursor: pointer;
+        @media (max-width: 768px) {
+          height: 16px;
+          width: 16px;
+          border-radius: 16px;
+        }
         &:nth-child(even) {
           margin-left: 5px;
           margin-right: 5px;
